OO-449 Vertical alignment of the menu-language items fixed

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1546,7 +1546,8 @@ button.icon {
       color: #FFF; } }
 
 .menu-language li {
-  margin-left: 0.8em; }
+  margin-left: 0.8em;
+  vertical-align: baseline; }
 
 @media (max-width: 767px) {
   .menu-language {
